fix: add swagger users/me use auth
