# app/docs/swagger.json
@@ -852,6 +852,11 @@
         },
         "/users/register": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Register a new user with provided name, email, and password.",
                 "consumes": [
                     "application/json"
